fix preview overflowing on other elements

--- a/src/BasePack/assets/css/main.css
+++ b/src/BasePack/assets/css/main.css
@@ -40,6 +40,7 @@ body {
     left: 0;
     height: 400px;
     width: 400px;
+    max-width: 100%;
 }
 
 h1, h2 {
